Implementado endpoint de pessoa